// userInfo.proto
package tp;
syntax = "proto3";

enum GenderType{
    male = 1;
    female = 2;
}

message UserInfo {
    string name = 1; //名字
    GenderType gender = 2; //性别
    int64 id = 3;//id
    int32 level = 4;//等级
    int64 money = 5;//金钱
}